# Robust-Physics-Guided-Diffusion-for-FWI

./: .gitignore  README.md  pyproject.toml  sample.py
configs/: sample-config-CurveFault-A.yaml  sample-config-CurveFault-B.yaml  sample-config-CurveVel-A.yaml  sample-config-CurveVel-B.yaml  sample-config-FlatFault-A.yaml  sample-config-FlatFault-B.yaml  sample_config.yaml
test_datasets/: 0.npy
test_datasets/CurveFault-A/: 0.npy
test_datasets/CurveFault-B/: 0.npy
test_datasets/CurveVel-A/: 0.npy
test_datasets/CurveVel-B/: vel0.npy
test_datasets/FlatFault-A/: 0.npy
