[project]
name = "robust-physics-guided-diffusion-full-waveform-inversion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "deepwave>=0.0.25",
    "diffusers>=0.36.0",
    "matplotlib>=3.10.8",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
